# Active-Cooling

./: .gitignore  .gitmodules  CMakeLists.txt
app/Active Cooling Viewer/: BluetoothManager.swift  FansChartView.swift  FansTableViewCell.swift  FansViewController.swift  SheetControllerViewController.swift  SheetManualViewController.swift  ThermalChartView.swift  ThermalTableViewCell.swift  ThermalViewController.swift
app/Active Cooling Viewer.xcodeproj/: project.pbxproj
app/Active Cooling Viewer.xcodeproj/project.xcworkspace/xcuserdata/camerongoddard.xcuserdatad/: UserInterfaceState.xcuserstate
app/Active Cooling Viewer.xcodeproj/xcshareddata/xcschemes/: Active Cooling Viewer.xcscheme
app/Active Cooling Viewer.xcodeproj/xcuserdata/camerongoddard.xcuserdatad/xcschemes/: xcschememanagement.plist
app/Fan Monitor/: AppDelegate.swift  BluetoothManager.swift  ChartView.swift  ChartWrapperView.swift  FansChartView.swift  FansTableViewCell.swift  FansViewController.swift  FillStationView.swift  SceneDelegate.swift  SheetControllerViewController.swift  SheetManualViewController.swift  StatsTableViewCell.swift  TabBarController.swift  ThermalDetailViewController.swift  ThermalTableViewCell.swift  ThermalViewController.swift
app/Fan Monitor.xcodeproj/: project.pbxproj
app/Fan Monitor.xcodeproj/project.xcworkspace/xcuserdata/camerongoddard.xcuserdatad/: UserInterfaceState.xcuserstate
app/Fan Monitor.xcodeproj/xcuserdata/camerongoddard.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
app/Fan Monitor.xcodeproj/xcuserdata/camerongoddard.xcuserdatad/xcschemes/: xcschememanagement.plist
app/Fan Monitor/Base.lproj/: Main.storyboard
pico/: CMakeLists.txt  format.sh  pt_cornell_rp2040_v1_3.h  temp_pid.cpp
pico/GATTService/: pid_db.gatt  service_implementation.h
pid/: CMakeLists.txt  temp_pid.c  temp_pid.cpp
pid/GAP_Advertisement/: gap_config.h
pid/GATTService/: pid_db.gatt  service_implementation.h
site/: index.html
test/: CMakeLists.txt  test_pwm.cpp
